@startuml
hide circle

class Position {
  -zeile: int
  -spalte: int
  --
  +Position(zeile: int, spalte: int)
  +equals(obj: Object): boolean
  +toString(): String
  +hashCode(): int
  +gibZeile(): int
  +gibSpalte(): int
}

abstract class Akteur {
  -position: Position
  -lebendig: boolean
  --
  +Akteur()
  +gibPosition(): Position
  +setzePosition(zeile: int, spalte: int): void
  +setzePosition(position: Position): void
  +istLebendig(): boolean
  +setzeGestorben(): void
  +agiere(aktuellesFeld: Feld, naechstesFeld: Feld, neueTiere: java.util.List): void
}

class Zaehler {
  -name: String
  -zaehler: int
  --
  +Zaehler(name: String)
  +gibName(): String
  +gibStand(): int
  +erhoehen(): void
  +zuruecksetzen(): void
}

class Feld {
  -{static} rand: Random = new Random()
  -tiefe: int
  -breite: int
  -feld: Akteur
  --
  +Feld(tiefe: int, breite: int)
  +raeumen(): void
  +platziere(akteur: Akteur): void
  +gibObjektAn(position: Position): Akteur
  +gibObjektAn(zeile: int, spalte: int): Akteur
  +zufaelligeNachbarposition(position: Position): Position
  +freieNachbarposition(position: Position): Position
  +nachbarpositionen(position: Position): Iterator
  +gibTiefe(): int
  +gibBreite(): int
}

class Simulator {
  -{static} STANDARD_BREITE: int = 50
  -{static} STANDARD_TIEFE: int = 50
  -{static} FUCHSGEBURT_WAHRSCHEINLICH: double = 0.02
  -{static} HASENGEBURT_WAHRSCHEINLICH: double = 0.08
  -{static} JAEGER_WAHRSCHEINLICH: double = 0.01
  -{static} JAEGER_SCHUSS_ANZAHL: int = 2
  -akteure: List
  -neueTiere: List
  -feld: Feld
  -naechstesFeld: Feld
  -schritt: int
  -ansicht: Simulationsansicht
  --
  +Simulator()
  +Simulator(tiefe: int, breite: int)
  +{static} main(args: String[]): void
  +starteLangeSimulation(): void
  +simuliere(schritte: int): void
  +simuliereEinenSchritt(): void
  +zuruecksetzen(): void
  -bevoelkere(feld: Feld): void
}

class Hase {
  -{static} GEBAER_ALTER: int = 5
  -{static} MAX_ALTER: int = 50
  -{static} GEBAER_WAHRSCHEINLICHKEIT: double = 0.15
  -{static} MAX_WURFGROESSE: int = 5
  -{static} rand: Random = new Random()
  --
  +Hase(zufaelligesAlter: boolean)
  +agiere(feld: Feld, naechstesFeld: Feld, neueTiere: List): void
  -alterErhoehen(): void
  -gebaereNachwuchs(): int
  +toString(): String
  -kannGebaeren(): boolean
}

class Simulationsansicht {
  -{static} LEER_FARBE: Color = Color.white
  -{static} UNDEF_FARBE: Color = Color.gray
  -SCHRITT_PREFIX: String = "Schritt: "
  -POPULATION_PREFIX: String = "Population: "
  -schrittLabel: JLabel
  -population: JLabel
  -feldansicht: Feldansicht
  -farben: HashMap
  -stats: FeldStatistik
  --
  +Simulationsansicht(hoehe: int, breite: int)
  +setzeFarbe(tierklasse: Class, farbe: Color): void
  -gibFarbe(tierklasse: Class): Color
  +zeigeStatus(schritt: int, feld: Feld): void
  +istAktiv(feld: Feld): boolean
}

class Feldansicht {
  -DEHN_FAKTOR: int = 6
  -feldBreite: int
  -feldHoehe: int
  -xFaktor: int
  -yFaktor: int
  ~groesse: Dimension
  -g: Graphics
  -feldImage: Image
  --
  +Feldansicht(hoehe: int, breite: int)
  +getPreferredSize(): Dimension
  +zeichnenVorbereiten(): void
  +zeichneMarkierung(x: int, y: int, farbe: Color): void
  +paintComponent(g: Graphics): void
}

class FeldStatistik {
  -zaehler: HashMap
  -zaehlerAktuell: boolean
  --
  +FeldStatistik()
  +gibBewohnerInfo(feld: Feld): String
  +zuruecksetzen(): void
  +erhoeheZaehler(tierklasse: Class): void
  +zaehlungBeendet(): void
  +istAktiv(feld: Feld): boolean
  -gibZaehlerstaende(feld: Feld): void
}

class Fuchs {
  -{static} GEBAER_ALTER: int = 10
  -{static} MAX_ALTER: int = 150
  -{static} GEBAER_WAHRSCHEINLICHKEIT: double = 0.09
  -{static} MAX_WURFGROESSE: int = 3
  -{static} HASEN_NAEHRWERT: int = 4
  -{static} rand: Random = new Random()
  -futterLevel: int
  --
  +Fuchs(zufaelligesAlter: boolean)
  +agiere(aktuellesFeld: Feld, naechstesFeld: Feld, neueTiere: List): void
  -alterErhoehen(): void
  -hungerVergroessern(): void
  -findeNahrung(feld: Feld, position: Position): Position
  -gebaereNachwuchs(): int
  +toString(): String
  -kannGebaeren(): boolean
}

abstract class Tier {
  -alter: int
  --
  +Tier()
  +agiere(aktuellesFeld: Feld, naechstesFeld: Feld, neueTiere: List): void
  +gibAlter(): int
  +setzeAlter(alter: int): void
}

class Jaeger {
  -schussAnzahl: int
  --
  +Jaeger(schussAnzahl: int)
  +agiere(aktuellesFeld: Feld, naechstesFeld: Feld, neueTiere: List): void
  -schiessen(feld: Feld): void
  +toString(): String
}

Akteur *-- Position
Akteur ..> Feld
Feld *-- Akteur
Feld ..> Position
Simulator *-- Feld
Simulator *-- Simulationsansicht
Hase --|> Tier
Hase ..> Feld
Simulationsansicht *-- Feldansicht
Simulationsansicht *-- FeldStatistik
Simulationsansicht ..> Feld
FeldStatistik ..> Feld
Fuchs --|> Tier
Fuchs ..> Feld
Fuchs ..> Position
Tier --|> Akteur
Tier ..> Feld
Jaeger --|> Akteur
Jaeger ..> Feld
@enduml